# InvokeInvoiceSystem

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Idea for program.txt  InvokeInvoiceSystem.cpp  InvokeInvoiceSystem.h  README.md  vcpkg.json
include/: .h  AccountManager.h  Database_Connection.h  InvoiceSystem.h  InvokeInvoiceSystem.h  MainMenu.h  MongoDBDataManager.h  MongoDBHandler.h  SetUserFromDB.h  User.h  pch.h
src/: AccountManager.cpp  InvokeInvoiceSystem.cpp
src/Accounts/: AccountManager.cpp  SetUserFromDB.cpp  User.cpp
src/System/: InvoiceSystem.cpp
src/System/Database/: Database_Connection.cpp  MongoDBDataManager.cpp  MongoDBHandler.cpp
src/System/Menu/: MainMenu.cpp
